--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     volumes:
       - ./:/var/www/html
       - ./.docker/nginx:/etc/nginx/conf.d/
+      - ./.docker/nginx/logs:/var/log/nginx
     networks:
       - laravel-network
   #mysql
