--- a/.docker/php-fpm/php-ini-overrides.ini
+++ b/.docker/php-fpm/php-ini-overrides.ini
@@ -1,3 +1,12 @@
 upload_max_filesize = 100M
 post_max_size = 108M
 memory_limit = -1
+
+#opcache
+opcache.memory_consumption=128
+opcache.interned_strings_buffer=8
+opcache.max_accelerated_files=4000
+opcache.revalidate_freq=60
+opcache.fast_shutdown=1
+opcache.enable_cli=1
+opcache.enable=1
